--- a/groupassigfts.Rmd
+++ b/groupassigfts.Rmd
@@ -9,10 +9,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
-
-# **THIS WILL BE CHANGED TO BE INTERACTIVE ONCE WE HAVE ALL THE TIME SERIES, IGNORE FOR NOW**
-## TEST
 </style>
 
 <h3 class = 'menutop' id="Contents">
@@ -37,28 +33,16 @@ knitr::opts_chunk$set(echo = TRUE)
 <center style="background-color:Gainsboro; width:40%;">Introduction</center>
 
 
-> 'We are glad to present to you our first Group Assignment! We also wanted to practice R further, so we are delivering our findings in a markdown format.'
+> We are glad to present to you our first Group Assignment! We also wanted to practice R further, so we are delivering our findings in a markdown format.
 
 ```{r, echo=F}
-# Before starting, we have to install and activate some R libraries in order to use the necessary statistics and time series functions:
-# basic statistics 
-install.packages("fBasics")
-# time series functions
-install.packages("forecast")
-# normality tests
-install.packages("normtest")
-
-# working with the excel tables
-install.packages("xlsx")
-install.packages("readxl")
+# Before starting, we have to activate some R libraries in order to use the necessary statistics and time series functions:
 
 library(fBasics)
 library(forecast)
 library(normtest)
 library(tidyverse)
 library(readxl)
-#library(xlsx)
-
 
 #clean environment
 #rm(list=ls())
@@ -67,7 +51,7 @@ library(readxl)
 #data<-read.csv("C:/Users/usuario/Desktop/LPC/MASTERS/MBD_abril_2019/Sessions2&3sim.csv",header=TRUE,sep=";",dec=",")
 
 #Oxana file paths
-#file_path_original_data <- file.path("~","Downloads","Timeseries","Homework_1_DATA .csv")
+file_path_original_data <- file.path("~","Downloads","Timeseries","Homework_1_DATA .csv")
 data<-read.csv(file_path_original_data, header=TRUE,sep=";",dec=",")
 summary_table_ts_file <- file.path("~","Downloads","Timeseries","resultsfts.xlsx")
 summary_table_ts_or <- read_excel(summary_table_ts_file, sheet = 1)
@@ -1025,23 +1009,4 @@ When testing for strict white noise, the series plot suggests this dataset does 
 </div>
 
 ###### THE END ######
-```{r, echo=FALSE}
-y<-series7
-# to adjust graphic size
-par(mar=c(2,2,2,2)) 
 
-# plot the series, its acf and pacf together
-par(mfrow=c(3,1))
-ts.plot(y)   
-acf(y)
-pacf(y)
-
-# compute basic statistics
-mean(y)
-sd(y)
-skewness(y)
-kurtosis(y,method=c("moment"))  
-
-
-
-```
